--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "gh-pages": "^3.2.3"
+    "axios": "^0.21.1",
+    "gh-pages": "^3.2.3",
+    "pnotify": "^5.2.0"
   }
 }
