--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "basiclightbox": "^5.0.4",
     "gh-pages": "^3.2.3",
     "pnotify": "^5.2.0"
   }
